Added Prices to the Beers

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -51,70 +51,70 @@
             <ul class="beer-showcase clearfix">
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/1.JPG" data-lightbox="mygallery" data-title="Miller">
+                        <a href="images/1.JPG" data-lightbox="mygallery" data-title="Miller (Valhalla Söröző - 400Ft)">
                             <img src="images/1.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/2.JPG" data-lightbox="mygallery" data-title="Staropramen">
+                        <a href="images/2.JPG" data-lightbox="mygallery" data-title="Staropramen (Valhalla Söröző - 450Ft)">
                             <img src="images/2.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/3.JPG" data-lightbox="mygallery" data-title="Mort Subite">
+                        <a href="images/3.JPG" data-lightbox="mygallery" data-title="Mort Subite (Valhalla Söröző - 600Ft)">
                             <img src="images/3.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/4.JPG" data-lightbox="mygallery" data-title="Soproni - IPA">
+                        <a href="images/4.JPG" data-lightbox="mygallery" data-title="Soproni - IPA (Pikoló Söröző - 450Ft)">
                             <img src="images/4.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/11.JPG" data-lightbox="mygallery" data-title="Borsodi - Hoppy">
+                        <a href="images/11.JPG" data-lightbox="mygallery" data-title="Borsodi - Hoppy (Pikoló Söröző - 420Ft)">
                             <img src="images/11.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/12.JPG" data-lightbox="mygallery" data-title="Gösser - Natur Radler">
+                        <a href="images/12.JPG" data-lightbox="mygallery" data-title="Gösser - Natur Radler (Pikoló Söröző - 330Ft)">
                             <img src="images/12.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/13.JPG" data-lightbox="mygallery" data-title="Kőbányai">
+                        <a href="images/13.JPG" data-lightbox="mygallery" data-title="Kőbányai (Pikoló Söröző - 280Ft)">
                             <img src="images/13.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/14.JPG" data-lightbox="mygallery" data-title="Desperados">
+                        <a href="images/14.JPG" data-lightbox="mygallery" data-title="Desperados (Roncs - 580Ft)">
                             <img src="images/14.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/21.JPG" data-lightbox="mygallery" data-title="Csíki - Áfonya">
+                        <a href="images/21.JPG" data-lightbox="mygallery" data-title="Csíki - Áfonya (Pikoló Söröző - 480Ft)">
                             <img src="images/21.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/22.JPG" data-lightbox="mygallery" data-title="Dreher - Hideg Komlós">
+                        <a href="images/22.JPG" data-lightbox="mygallery" data-title="Dreher - Hideg Komlós (Latin - 490Ft)">
                             <img src="images/22.JPG">
                         </a>
                     </figure>
@@ -128,14 +128,14 @@
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/24.JPG" data-lightbox="mygallery" data-title="Edelweiss">
+                        <a href="images/24.JPG" data-lightbox="mygallery" data-title="Edelweiss (Roncs - 840Ft)">
                             <img src="images/24.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/41.JPG" data-lightbox="mygallery" data-title="Stella Artois">
+                        <a href="images/41.JPG" data-lightbox="mygallery" data-title="Stella Artois (Latin - 490Ft)">
                             <img src="images/41.JPG">
                         </a>
                     </figure>
@@ -149,35 +149,35 @@
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/43.JPG" data-lightbox="mygallery" data-title="Heineken">
+                        <a href="images/43.JPG" data-lightbox="mygallery" data-title="Heineken (Latin - 490Ft)">
                             <img src="images/43.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/44.JPG" data-lightbox="mygallery" data-title="Pilsner Urquell">
+                        <a href="images/44.JPG" data-lightbox="mygallery" data-title="Pilsner Urquell (Latin - 490Ft)">
                             <img src="images/44.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/31.JPG" data-lightbox="mygallery" data-title="Csapolt Dreher">
+                        <a href="images/31.JPG" data-lightbox="mygallery" data-title="Csapolt Dreher (Valhalla Söröző - 450Ft)">
                             <img src="images/31.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/32.JPG" data-lightbox="mygallery" data-title="Csapolt Soproni">
+                        <a href="images/32.JPG" data-lightbox="mygallery" data-title="Csapolt Soproni (Roncs - 450Ft)">
                             <img src="images/32.JPG">
                         </a>
                     </figure>
                 </li>
                 <li>
                     <figure class="beer-photo">
-                        <a href="images/34.JPG" data-lightbox="mygallery" data-title="Csapolt Mort Subite">
+                        <a href="images/34.JPG" data-lightbox="mygallery" data-title="Csapolt Mort Subite (Roncs - 480Ft)">
                             <img src="images/34.JPG">
                         </a>
                     </figure>
