Added documentation to style, style_dark, and index files

--- a/rootfolder/index.html
+++ b/rootfolder/index.html
@@ -12,6 +12,9 @@
     <script src="js/theme-changer.js"></script>
 </head>
 
+
+<!-- HOME PAGE STARTS HERE-->
+
 <body>
     <header id="home-page">
         <nav class="nav-bar">
@@ -42,6 +45,8 @@
             </section>
         </div>
     </header>
+
+    <!-- GALLERY STARTS HERE-->
 
     <section class="section-gallery" id="gallery">
         <div class="gallery-main-wrapper">
@@ -193,6 +198,8 @@
         </div>
     </section>
 
+    <!-- ABOUT US SECTION STARTS HERE -->
+    
     <section class="section-about-us" id="about-us">
         <div class="main-wrapper">
             <h1><center>A Fejlesztő Csapat</center></h1>
